# Diffusion-Models4dummies-

./: README.md
proyecto_AAIII_02_diffusion_models/: README.md  cats_metrics.ipynb  conditional_and_imputation.ipynb  diffusion_lib_use_cases.ipynb  fid_ve_vp.ipynb  project_AAIII_team12_Miranda_Dominguez.ipynb  pyproject.toml  samplers_vp_exp.ipynb  train_all_color_digits.py  train_all_color_digits_conditional.py  train_cats.py
proyecto_AAIII_02_diffusion_models/diffusion_lib/: __init__.py  model.py
proyecto_AAIII_02_diffusion_models/diffusion_lib/legacy/: __init__.py  diffusion_process.py
proyecto_AAIII_02_diffusion_models/diffusion_lib/metrics/: __init__.py  bpd.py  fid_is.py
proyecto_AAIII_02_diffusion_models/diffusion_lib/processes/: __init__.py  base.py  ve.py  vp.py
proyecto_AAIII_02_diffusion_models/diffusion_lib/samplers/: __init__.py  base.py  euler_maruyama.py  imputation.py  predictor_corrector.py  probability_flow_ode.py
proyecto_AAIII_02_diffusion_models/diffusion_lib/schedules/: __init__.py  base.py  cosine.py  exponential.py  linear.py
proyecto_AAIII_02_diffusion_models/diffusion_lib/score_models/: __init__.py  base.py  cfg_wrapper.py  conditional.py  unconditional.py  unconditional_color.py
proyecto_AAIII_02_diffusion_models/diffusion_lib/utils/: __init__.py  visualization.py
proyecto_AAIII_02_diffusion_models/otras_pruebas/cat_AI/: cifar10_cats_diffusion.ipynb
proyecto_AAIII_02_diffusion_models/tests/: test_model.py  test_processes.py  test_schedules.py  test_score_models.py
(+6 files in other folders)
